--- a/CLIENT/src/App.css
+++ b/CLIENT/src/App.css
@@ -6,6 +6,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   /* position: relative; */
   overflow-x: hidden;
+  /* text-align: center; */
 }
  
 :root{
@@ -347,18 +348,22 @@ body {
 
 /* ============================= */
 footer {
-  color: #388087;
+  color: var(--first-color);
   padding: 2rem 3rem;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  background-color: black;
+  background-color: rgb(176, 173, 173);
 
 }
 
 footer .contact-info {
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
+
 
 footer .contact-info .info {
   display: flex;
@@ -373,6 +378,9 @@ footer .contact-info .info i {
 
 footer .site-map {
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 footer .site-map iframe {
@@ -383,60 +391,32 @@ footer .site-map iframe {
 footer .pages {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   padding: 1rem;
 }
 
 footer .pages a {
   text-decoration: none;
   font-size: 1.2rem;
-  color: #388087;
+  color: var(--first-color);
   margin-top: 1rem;
 }
 
 footer .social-media {
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+footer .social-media .social-link{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 footer .social-media i {
   font-size: 1.75rem;
   margin-right: .75rem;
-}
-
-
-/* =========Boking page============ */
-
-#booking-page{
-  height: 100vh;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  padding: 3rem 1rem;
-}
-
-.booking-container{
-  width: 50%;
-  height: 100%;
-  border: 1px solid gray;
-  padding: 1rem;
-}
-.booking-details{
-  width: 50%;
-  height: 100%;
-  border: 1px solid gray;
-  padding: 1rem;
-}
-.vehicle-info{
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  border-bottom: 1px solid gray;
-}
-.booking-details .input-fields{
-  display: flex;
-  flex-direction: row;
-  width: 350px;
 }
 
 
@@ -466,7 +446,7 @@ footer .social-media i {
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -484,6 +464,10 @@ footer .social-media i {
 .vehicle-details {
   text-align: center;
   color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .vehicle-details i{
   color: var(--first-color);
@@ -491,6 +475,174 @@ footer .social-media i {
 
 .vehicle-details p {
   font-weight: 700;
+}
+.book-btn{
+  margin-top: 1.5rem;
+}
+
+
+
+/* =========Boking page============ */
+
+#booking-page {
+  width: 95%;
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding: 4rem;
+  background-color: #f7f8fc;
+}
+
+.booking-container {
+  width: 45%;
+  height: 100%;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  padding: 2rem;
+}
+
+.vehicle-info {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 2rem;
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 4rem;
+  margin-bottom: 1rem;
+}
+
+.vehicle-info .vehicle-img img {
+  width: 300px;
+  height: 200px;
+  border-radius: 8px;
+}
+
+.vehicle-description h1 {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.vehicle-description p {
+  font-size: 1.25rem;
+  color: #000000;
+  margin: 0.5rem 0;
+}
+
+.imp-points {
+  display: grid;
+  grid-template-columns: repeat(1fr, 1fr, 1fr);
+  gap: 1.5rem;
+
+}
+
+.imp-points .point h2 {
+  font-size: 1.25rem;
+}
+
+.imp-points .point p {
+  font-size: 1rem;
+  color: #666;
+}
+
+.booking-details {
+  width: 45%;
+  height: 100%;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  padding: 2rem;
+  text-align: center;
+
+}
+
+.booking-details h1 {
+  font-size: 1.75rem;
+  margin-bottom: .5rem;
+  color: #333;
+}
+
+.booking-details form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.booking-details .input-fields {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-bottom: .5rem;
+}
+
+.booking-details .input-fields label {
+  font-weight: bold;
+  /* margin-right: 1rem; */
+}
+
+
+.booking-details .input-fields .custom-datepicker {
+  min-width: 100%;
+  height: 45px;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  box-sizing: border-box; /* Ensure padding is included in width calculation */
+}
+
+
+.booking-details .input-fields .input-field {
+  width: 98%;
+  height: 30px;
+  outline: 0;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+.booking-details .input-fields select{
+  width: 100%;
+  height: 45px;
+  outline: 0;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+
+}
+
+.booking-details .input-fields .input-field::placeholder{
+  color: #ddd;
+}
+.booking-details .custom-datepicker::placeholder{
+  color: #ddd;
+}
+
+
+.booking-details button {
+  background-color: var(--first-color);
+  color: white;
+  border: none;
+  padding: 0.75rem 1.5rem;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1rem;
+  margin-top: .5rem;
+}
+
+.booking-details button:disabled {
+  background-color: #6e6c6c;
+}
+
+.booking-details .input-fields p {
+  font-weight: bold;
+  color: #333;
 }
 
 
@@ -801,6 +953,50 @@ footer .social-media i {
   opacity: 1;
 }
 
+#account-page .user-details{
+  width: 300px;
+  justify-content: center;
+  align-items: center;
+}
+#account-page .user-details .edit-username{
+  width: 100%;
+  height: 34px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+#account-page .user-details .edit-username input{
+  width: 70%;
+  height: 100%;
+  outline: 0;
+  border-radius: .5rem 0 0 .5rem;
+  border: 2px solid var(--first-color);
+  color: var(--first-color);
+}
+#account-page .user-details .edit-username button{
+  width: 20%;
+  height: 40px;
+  border-radius: 0 .5rem .5rem 0;
+  outline: 0;
+  border: 2px solid var(--first-color);
+  background-color: var(--first-color);
+  font-size: 1.25rem;
+
+}
+#account-page .user-details .change-pass{
+  width: 90%;
+  text-align: center;
+}
+#account-page .user-details a{
+  text-decoration: none;
+  font-size: 1.25rem;
+  color: var(--first-color);
+}
+#account-page .user-details a:hover{
+  text-decoration: underline;
+}
+
 /* =======admin panel======= */
 .admin-controller {
   display: flex;
@@ -808,58 +1004,39 @@ footer .social-media i {
   justify-content: center;
   align-items: center;
 }
-
-.admin-upper {
+.admin-nav{
   width: 100%;
-  height: 150px;
+  height: 50px;
+  padding-top: 2.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: var(--first-color);
-  font-size: 1.5rem;
-  position: relative;
 }
-
-.admin-lower {
+.admin-nav ul{
+  width: 35%;
   display: flex;
-  width: 100%;
-  min-height: 100vh;
-  height: auto;
-  position: relative;
-}
-
-.admin-sidebar {
-  width: 400px;
+  justify-content: center;
+  align-items: center;
+  padding: .25rem;
   background-color: var(--second-color);
-  padding: 1rem;
-}
-
-.admin-navbar {
-  display: none;
+  border-radius: .5rem;
 
 }
-
-.admin-sidebar ul {
-  display: flex;
-  flex-direction: column;
-}
-
-.admin-sidebar ul li,
-.admin-sidebar ul li a {
+.admin-nav ul li,
+.admin-nav ul li a{
   list-style: none;
   text-decoration: none;
+  padding: .5rem 1rem;
+  font-size: 1.15rem;
   color: var(--first-color);
-  padding: 1.5rem 2rem;
-  font-size: 1.5rem;
-  font-weight: 600;
+  
+}
+.admin-nav-active{
+  background-color: white;
+  border-radius: .5rem;
 }
 
-.admin-sidebar ul li {
-  border: 1px solid var(--first-color);
-  margin-bottom: 1rem;
-  border-radius: 1rem;
-  text-align: center;
-}
+
 table {
   width: 100%;
   height: auto;
@@ -898,10 +1075,8 @@ thead tr {
 
 /* =======admin-dashboard======== */
 .admin-dashboard{
-  width: 100%;
-  padding: 1rem;
-  padding-top: 2.5rem;
-  background-color: var(--second-color);
+  width: 90%;
+  padding: 2.5rem;
   overflow: auto;
 }
 .update-status{
@@ -937,40 +1112,60 @@ select{
 
 
 /* =====add vehicle======== */
-.vehicle-page {
+#vehicle-page {
   display: flex;
+  width: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 2rem;
+  padding: 2rem;
+  /* background-color: var(--second-color); */
 
   h1 {
     margin: 0 0 1rem 0;
     font-size: 2rem;
   }
+
+  label{
+    font-size: 1.75rem;
+    padding-bottom: 1rem;
+  }
 }
 
 .vehicle-form {
-  width: 400px;
-  height: 500px;
-  border: 1px solid #388087;
+  width: auto;
+  min-width: 800px;
+  height: auto;
   border-radius: .5rem;
-  padding: 1rem;
+  padding: 2rem;
   margin-bottom: 2rem;
+  background-color: #e6e9ee;
 }
 
 .vehicle-form select {
-  height: 35px;
+  height: 50px;
+  background-color: white;
+
+}
+.edit-user-form{
+  width: auto;
+  min-width: 400px;
+  height: auto;
+  border-radius: .5rem;
+  padding: 2rem;
+  margin-bottom: 2rem;
+  background-color: #e6e9ee;
+}
+.vehicle-edit-page{
+  width: 600px;
+  height: auto;
+  border-radius: .5rem;
+  padding: 2rem;
+  margin-bottom: 2rem;
+  background-color: #e6e9ee;
 }
 
-#admin-panel {
-  background-color: #8d9fa1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: auto;
-  width: 100%;
-}
+
 /* ===========my booking page=========== */
 .my-bookings-container {
   width: 80%;
