--- a/CLIENT/src/App.css
+++ b/CLIENT/src/App.css
@@ -494,7 +494,7 @@ footer .social-media i {
   justify-content: center;
   align-items: center;
   gap: 1rem;
-  padding: 4rem;
+  padding: 4rem 3rem;
   background-color: #f7f8fc;
 }
 
@@ -1433,6 +1433,35 @@ h1 {
   .vehicle-details{
     text-align: left;
   }
+  /* =====booking page======= */
+  /* ======booking page ========== */
+  #booking-page {
+    width: 95%;
+    height: 90vh;
+    padding: 4rem 1rem;}
+  .vehicle-info{
+    width: 100%;
+    gap: .5rem;
+    margin: 1rem 0rem;
+    padding-bottom: 1rem;
+  }
+  .imp-points {
+
+    gap: .5rem;
+} 
+  .vehicle-info .vehicle-img {
+    width: 90%;
+    height: 150px;
+    
+  }
+  .vehicle-info .vehicle-img img {
+    width: 100%;
+    height: 100%;
+
+  }
+  .vehicle-description{
+    text-align: center;
+  }
 }
 
 
@@ -1464,7 +1493,7 @@ h1 {
   }
 
   .home-container .heading {
-    font-size: 1rem;
+    font-size: .75rem;
   }
 
   .home-container .main-img {
@@ -1637,5 +1666,56 @@ h1 {
   }
   .vehicle-edit-page .input-fields img{
     width: 80%;
+  }
+  /* ======= booking page ======== */
+  #booking-page {
+    width: 95%;
+   height: auto;
+    display: flex;
+    flex-direction: column;
+    padding: .5rem;
+    /* background-color: #000; */
+  }
+  .booking-container {
+    width: 95%;
+    padding: .5rem;
+  }
+  .vehicle-info{
+    width: 100%;
+    gap: .5rem;
+    margin: 1rem 0rem;
+  }
+  .vehicle-info .vehicle-img {
+    width: 70%;
+    height: 150px;
+    
+  }
+  .vehicle-info .vehicle-img img {
+    width: 100%;
+    height: 100%;
+
+  }
+  .vehicle-info .vehicle-description{
+    text-align: center;
+    h1{
+      font-size: 1rem;
+    }
+  }
+  .imp-points {
+    gap: 0rem;
+  }
+  .booking-details {
+    width: 100%;
+    height: auto;
+    padding: 1rem 0rem;
+    text-align: center;
+  }
+  .booking-details  form{
+    width: 95%;
+    padding: .5rem;
+    text-align: center;
+  }
+  .booking-details .input-fields {
+    width: 95%; 
   }
 }
