--- a/CLIENT/src/App.css
+++ b/CLIENT/src/App.css
@@ -508,21 +508,26 @@ footer .social-media i {
 }
 
 .vehicle-info {
+  display: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
   border-bottom: 1px solid #ddd;
   padding-bottom: 4rem;
   margin-bottom: 1rem;
 }
-
+.vehicle-info .vehicle-img{
+  width: 60%;
+}
 .vehicle-info .vehicle-img img {
-  width: 300px;
+  width: 100%;
   height: 200px;
   border-radius: 8px;
 }
-
+.vehicle-description{
+  text-align: center;
+}
 .vehicle-description h1 {
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
