--- a/CLIENT/src/App.css
+++ b/CLIENT/src/App.css
@@ -290,7 +290,7 @@ body {
   }
 }
 
-.home-container .explore-btn {
+.explore-btn {
   width: 150px;
   height: 50px;
   background-color: var(--first-color);
